# allbert-assist

./: .credo.exs  .env.example  .formatter.exs  .gitignore  0.39-impl-audit-01.md  0.39-impl-audit-02.md  0.39-impl-audit-03.md  0.39-remediation-drift-audit-01.md  AGENTS.md  CARGO_DEPS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  mix.exs  process-flow-notes.md  v0.38-audit-01.md  v0.38-audit-02.md  v0.43-impl-audit-01.md  v0.43-impl-audit-02.md  v0.43-impl-audit-03.md  v0.43-remediation-audit.md  v0.61_manual_operator_feedback.md
.github/workflows/: release-artifacts.yml
apps/allbert_assist/: README.md  mix.exs
apps/allbert_assist_web/: .gitignore  README.md  mix.exs
apps/stocksage/: mix.exs
apps/stocksage_web/: mix.exs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
crates/allbert-channels/: Cargo.toml
crates/allbert-cli/: Cargo.toml
crates/allbert-cli/src/: adapters_cli.rs  approvals.rs  diagnose_cli.rs  heartbeat_cli.rs  identity_cli.rs  main.rs  memory_cli.rs  profile_cli.rs  rag_cli.rs  repl.rs  self_improvement_cli.rs  settings_cli.rs  setup.rs  skills.rs  telegram_setup_cli.rs  trace_cli.rs  tui.rs  utilities_cli.rs
crates/allbert-daemon/: Cargo.toml
crates/allbert-daemon/src/: client.rs  error.rs  jobs.rs  lib.rs  main.rs  server.rs
crates/allbert-daemon/tests/: m1_daemon.rs
crates/allbert-jobs/: Cargo.toml
crates/allbert-jobs/src/: lib.rs  main.rs
crates/allbert-kernel/: Cargo.toml
crates/allbert-kernel-core/: Cargo.toml
crates/allbert-kernel-core/assets/: adapter-golden-bootstrap.jsonl
crates/allbert-kernel-core/src/: atomic.rs  command_catalog.rs  config.rs  hooks.rs  identity.rs  intent.rs  job_manager.rs  lib.rs  memory.rs  paths.rs  rag.rs  scripting.rs  security.rs  settings.rs  skills.rs  tool_call_parser.rs  tools.rs  trace.rs
crates/allbert-kernel-core/src/agent/: mod.rs  state.rs
crates/allbert-kernel-core/src/llm/: mod.rs  provider.rs
crates/allbert-kernel-core/tests/: imports.rs
crates/allbert-kernel-services/: Cargo.toml
crates/allbert-kernel/src/: adapter.rs  atomic.rs  bootstrap.rs  command_catalog.rs  config.rs  cost.rs  error.rs  events.rs  heartbeat.rs  hooks.rs  identity.rs  job_manager.rs  lib.rs  local_utilities.rs  paths.rs  replay.rs  self_diagnosis.rs  self_improvement.rs  settings.rs  tool_call_parser.rs  trace.rs
crates/allbert-kernel/src/adapters/: corpus.rs  factory.rs  job.rs  manifest.rs  mod.rs  runtime.rs  store.rs  trainer.rs  trainer_fake.rs  trainer_llamacpp.rs  trainer_mlx.rs
crates/allbert-kernel/src/agent/: mod.rs  state.rs
crates/allbert-kernel/src/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs
crates/allbert-kernel/src/memory/: curated.rs  mod.rs
crates/allbert-kernel/src/scripting/: mod.rs
crates/allbert-kernel/src/security/: mod.rs
crates/allbert-kernel/src/skills/: mod.rs
crates/allbert-kernel/src/tools/: mod.rs
crates/allbert-proto/: Cargo.toml
docs/: README.md  onboarding-and-operations.md  vision.md
docs/adr/: 0000-record-architecture-decisions.md  0001-kernel-is-runtime-core-frontends-are-adapters.md  0001-signal-first-jido-runtime.md  0002-markdown-first-memory.md  0002-skill-bodies-require-explicit-activation.md  0003-memory-files-are-durable-chat-history-is-not.md  0003-skill-manifests-as-capability-contracts.md  0004-domain-settings-engine.md  0004-process-exec-uses-direct-spawn-and-central-policy.md  0005-canonical-allbert-home.md  0005-support-anthropic-and-openrouter-in-v0-1.md  0006-hook-api-is-public-from-day-one.md  0006-security-central.md  0007-jido-native-internal-runtime-boundaries.md  0007-session-scoped-exact-match-confirm-trust.md  0008-skill-allowed-tools-is-a-fence-not-a-sandbox.md  0009-local-execution-sandbox-levels.md  0009-v0-1-tool-surface-expansion-and-policy-envelope.md  0010-bootstrap-personality-files-are-first-class-runtime-context.md  0011-confirmed-external-capability-adapters.md  0011-v0-1-closeout-targets-a-source-based-cli-with-guided-onboarding-and-explicit-workspace-trust.md  0012-resource-access-security-posture.md  0012-v0-2-target-is-scheduled-jobs-and-maintenance-runs.md  0013-clients-attach-to-a-daemon-hosted-kernel-via-channels.md  0013-scheduled-jobs-are-a-non-interactive-frontend-over-the-kernel.md  0013-uri-first-resource-identity.md  0014-local-workspace-identity.md  0014-v0-2-scheduling-is-driven-by-the-os-scheduler-not-a-resident-daemon.md  0014-v0-2-scheduling-is-owned-by-the-daemon-job-manager.md  0015-allbert-app-contract-and-surface-dsl.md  0015-scheduled-jobs-fail-closed-on-interactive-actions.md  0016-channel-adapter-boundary-and-identity-mapping.md  0016-scheduled-runs-use-fresh-sessions-and-may-attach-ordered-skills.md  0017-allbert-plugin-contract.md  0017-v0-2-ships-bundled-job-templates-disabled-by-default.md  0018-kernel-must-be-capable-of-running-as-a-long-lived-daemon-host.md  0018-stocksage-local-domain-app.md  0019-cross-surface-intent-enrichment.md  0019-v0-2-services-are-supervised-in-process-tasks-with-future-subprocess-seams.md  (+156 more)
docs/archives/: README.md  (+6 more)
homebrew/: allbert.rb  fill-sha256.sh
rel/: env.sh.eex
reports/: system-health-check.md  trace-triage.md
scripts/: v048_voice_live_smoke.exs  v049_vision_live_smoke.exs  v050b_artifacts_browser_smoke.exs
tools/: check_doc_reality.sh  check_kernel_crate_graph.sh  check_kernel_dependency_compactness.sh  check_kernel_import_migration.sh  check_kernel_size.sh
(+2623 files in other folders)
