[package]
name = "allbert-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
allbert-channels = { path = "../allbert-channels" }
allbert-daemon = { path = "../allbert-daemon" }
allbert-jobs = { path = "../allbert-jobs" }
allbert-kernel = { path = "../allbert-kernel" }
allbert-proto = { path = "../allbert-proto" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
reedline = "0.36"
tracing = "0.1"
async-trait = "0.1"
iana-time-zone = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
gray_matter = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
toml = "0.8"
