[package]
name = "allbert-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
allbert-kernel = { path = "../allbert-kernel" }
allbert-proto = { path = "../allbert-proto" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures-util = { version = "0.3", features = ["sink"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.4", features = ["derive"] }
interprocess = { version = "2.2", features = ["tokio"] }
bytes = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
