[package]
name = "allbert-daemon"
version = "0.13.0"
edition = "2021"

[dependencies]
allbert-channels = { path = "../allbert-channels" }
allbert-kernel = { path = "../allbert-kernel" }
allbert-proto = { path = "../allbert-proto" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures-util = { version = "0.3", features = ["sink"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
clap = { version = "4.4", features = ["derive"] }
interprocess = { version = "2.2", features = ["tokio"] }
bytes = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
gray_matter = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
cron = "0.12"
serde_yaml = "0.9"
teloxide = "0.17"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
