[package]
name = "allbert-jobs"
version = "0.8.0"
edition = "2021"

[dependencies]
allbert-daemon = { path = "../allbert-daemon" }
allbert-kernel = { path = "../allbert-kernel" }
allbert-proto = { path = "../allbert-proto" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
gray_matter = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
