[package]
name = "allbert-kernel-core"
version = "0.14.3"
edition = "2021"

[dependencies]
allbert-proto = { path = "../allbert-proto" }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
dirs = "5.0"
fs2 = "0.4"
gray_matter = "0.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset", "macros"] }
tokio = { version = "1", features = ["rt", "net", "time"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.13"
