[package]
name = "allbert-kernel"
version = "0.8.0"
edition = "2021"

[dependencies]
allbert-proto = { path = "../allbert-proto" }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
async-trait = "0.1"
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["formatting", "parsing", "local-offset", "macros"] }
gray_matter = "0.3"
fs2 = "0.4"
pulldown-cmark = "0.12"
serde_yaml = "0.9"
sha2 = "0.10"
tantivy = "0.22"
tempfile = "3.13"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
